# XROps

./: README.md
Server/xrops/server/: __main__.py  __workspace__.py  _facefeature.txt  background.py  config.py  database.py  documentation.py  file.py  holoSensor.py  log_main.ini  log_workspace.ini  main.py  models.py  openslideServer.py  pyproject.toml  router_main.py  storage.py  workspace.py  xml_parsing_test.py
Server/xrops/server/viewer/: client_ipc_rc.py  client_ipc_su.py  client_ipc_umq.py  client_ipc_vi.py  client_stream_eet.py  client_stream_extended_audio.py  client_stream_microphone.py  client_stream_pv.py  client_stream_rm_depth_ahat.py  client_stream_rm_depth_longthrow.py  client_stream_rm_imu.py  client_stream_rm_vlc.py  client_stream_si.py  hl2ss.py  hl2ss_3dcv.py  hl2ss_io.py  hl2ss_lnm.py  hl2ss_rus.py  hl2ss_sa.py  hl2ss_utilities.py  sample_2d_to_3d_segmentation_pv.py  sample_2d_to_3d_segmentation_rm_vlc.py  sample_eet_pv.py  sample_eet_rm_vlc.py  sample_integrator.py  sample_integrator_pv.py  sample_integrator_pv_sm.py  sample_integrator_pv_su.py  sample_integrator_rm_vlc.py  sample_rgbd.py  sample_rgbd_ahat_vlc.py  sample_rgbd_pv.py  sample_rgbd_rm_vlc.py  sample_si_pv.py  sample_si_rm_depth_ahat.py  sample_si_rm_vlc.py  sample_sm_follow.py  sample_sm_pv_depth.py  sample_stereo_rectify.py  sample_stereo_rectify_pv.py  (+10 more)
Server/xrops/server/yolo/: 1669053219_depth.tif  face_detector.py  fuck.tif  img_histogram.tif  krlee.py
Server/xrops/server/yolo/models/: common.py  experimental.py  yolo.py
Server/xrops/server/yolo/utils/: datasets.py  plots.py  (+2 more)
(+256 files in other folders)
